// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern query tests tests for all patterns and one pattern #1 Should receive all patterns 1`] = `
Object {
  "__typename": "PaginatedPatterns",
  "items": Array [
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "update value",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "update value",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large_0_test-file",
        "medium": "medium_0_test-file",
        "small": "small_0_test-file",
        "thumbnail": "thumbnail_0_test-file",
      },
      "material": "update",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "duplicated value",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "duplicated value",
        },
      ],
    },
  ],
}
`;

exports[`pattern query tests tests for all patterns and one pattern #2 Should receive one pattern 1`] = `
Object {
  "__typename": "Pattern",
  "available": true,
  "description": Array [
    Object {
      "__typename": "Language",
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "__typename": "Language",
      "lang": "en",
      "value": "test value",
    },
  ],
  "handmade": false,
  "images": Object {
    "__typename": "ImageSet",
    "large": "large_335nr4j5dkebkw5cy_test.jpg",
    "medium": "medium_335nr4j5dkebkw5cy_test.jpg",
    "small": "small_335nr4j5dkebkw5cy_test.jpg",
    "thumbnail": "thumbnail_335nr4j5dkebkw5cy_test.jpg",
  },
  "material": "test",
  "name": Array [
    Object {
      "__typename": "Language",
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "__typename": "Language",
      "lang": "en",
      "value": "test value",
    },
  ],
}
`;

exports[`pattern query tests tests for all patterns and one pattern pattern pagination test 1`] = `
Object {
  "__typename": "PaginatedPatterns",
  "count": 1,
  "items": Array [
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "update value",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "update value",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large_0_test-file",
        "medium": "medium_0_test-file",
        "small": "small_0_test-file",
        "thumbnail": "thumbnail_0_test-file",
      },
      "material": "update",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "duplicated value",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "duplicated value",
        },
      ],
    },
  ],
}
`;
